# orag

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: __init__.py  config.py  data_processor.py  main.py  rag_engine.py  vector_store.py
evaluation/: EVALUATION_README.md  evaluate_rag.py
